# pawbs-engine

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  Run Game.lnk  fly.toml  index.html  package-lock.json  package.json  style.css
Classes/: controls.class.js  player.class.js  world.class.js
Worlds/: worlds.js  worlds.json
src/: index.html  settings.json  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/classes/: assets.class.js  billboard.class.js  controls.class.js  debug.class.js  editor.class.js  game.class.js  multiplayer.class.js  player.class.js  settings.class.js  shaders.class.js  ui.class.js  utilities.class.js  world.class.js
src/handlers/: debug.events.js  editor.events.js  game.events.js  menu-main.events.js  menu-multiplayer.events.js  menu-options.events.js  menu-pause.events.js  utility.events.js
src/libraries/threejs/modules/: CustomObjectLoader.js  CustomOutlineEffect.js  CustomPointerLockControls.js  OutlineEffect.js  (+4 more)
src/objects/: apple1.json
src/objects/trees/: large_tree1.json  large_tree2.json
src/servers/: dedicated-server.js  http-server.js  servers.json  signaling-server.js
src/servers/helpers/: server-utility.js
src/textures/: textures.json
src/three.js/modules/: OutlineEffect.js
src/ui/: dialog-box.events.js  editor.events.js  game.events.js  menu-main.events.js  menu-multiplayer.events.js  menu-options.events.js  menu-pause.events.js  utility.events.js
src/worlds/: Test World.json  TestWorld.json  worlds.js  worlds.json
